<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <!--TITULO-->
        <TextView
            android:text="@string/RegistroTXT"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--IMAGEN-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/registrar" />
        <!--CORREO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Correo"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--CONTRASENA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Password"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--NOMBRE-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Nombre"
                android:hint="@string/Nombres"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--APELLIDOS-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Apellidos"
                android:hint="@string/Apellidos"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--EDAD-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Edad"
                android:hint="@string/Edad"
                android:inputType="number"
                android:textColorHint="#000"
                android:importantForAutofill="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--TELEFONO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Telefono"
                android:hint="@string/Telefono"
                android:inputType="number"
                android:textColorHint="#000"
                android:importantForAutofill="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--DIRECCION-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Direccion"
                android:hint="@string/Direccion"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColorHint="#000"
                android:importantForAutofill="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--REGISTRAR USUARIO-->
        <Button
            android:id="@+id/REGISTRARUSUARIO"
            android:text="@string/REGISTRARUSUARIO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_personalizado"
            android:textColor="#FFFFFF"
            android:layout_marginTop="15dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>